--- a/doc/manual.bib
+++ b/doc/manual.bib
@@ -23,10 +23,6 @@
 %%    Hig  -> Hig51   Neu1 -> Neu54    Neu2 -> Neu79   CH   -> CH97
 %%    CLR  -> CLR90   MKS  -> MKS76    CM   -> CM72
 
-@PREAMBLE{ "% Awful hack to remove \qquad from after a URL           " }
-@PREAMBLE{ "\def\rmqquadafter#1#2{\let\qquadsave\qquad \def\qquad{}  
-                                 #1{#2}\let\qquad\qquadsave}         " }
-
 @INCOLLECTION{Lee70,
   AUTHOR        = {John Leech},
   TITLE         = {Coset enumeration},
@@ -161,7 +157,7 @@
                      (\Mailto{group-pub-forum@maths.bath.ac.uk}),
                    Problem 11, 1996.
                    See
-                   {\rmqquadafter\URL{http://www2.bath.ac.uk/~masgcs/problem/problem11.htm}}}
+                   {\URL{http://www2.bath.ac.uk/~masgcs/problem/problem11.htm}}}
 }
 
 @MISC{HHKR,
@@ -173,10 +169,10 @@
 
 @MISC{HR99a,
   AUTHOR        = {George Havas and Colin Ramsay},
-  TITLE                = {Coset enumeration: {\sf ACE} version 3},
+  TITLE         = {Coset enumeration: {\sf ACE} version 3},
   YEAR          = {1999},
-  NOTE                = {Available as 
-                   {\rmqquadafter\URL{http://www.csee.uq.edu.au/~havas/ace3.tar.gz}}}
+  NOTE          = {Available as 
+                   {\URL{http://www.csee.uq.edu.au/~havas/ace3.tar.gz}}}
 }
 
 @INCOLLECTION{KB70,
